--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-easy-crop": "^4.4.0",
+    "react-image-crop": "^10.0.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
